<resources>
    <string name="app_name">LightSys Events</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings_portal">Settings</string>
    <string name="scan_new_qr">Scan QR</string>
    <string name="no_event_name">No Name</string>
    <string name="disabled_camera_permissions">Camera permissions are disabled. Permissions must be enabled from system settings before scanning a QR.</string>
    <string name="denied_camera_permissions">Camera permissions were denied. Unable to scan QR.</string>
    <string name="scan_qr_logo" translatable="false">iVBORw0KGgoAAAANSUhEUgAAAIEAAACBCAYAAADnoNlQAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAlGSURBVHhe7ZLRivS8DgT3/V/6OzQsOrqotkeKkjH7p6AuDJWOZ8jPv5f/PO9H8PL/j+Dn5+d4q9DGlA5qTzTzfgRNHdSeaOb9CJo6qD3RzPsRNHVQe6KZ9yNo6qD2RDPLj+Bb0F1kFdqQBHWyCm3Ib0F3kZk47cInobvIKrQhCepkFdqQ34LuIjNx2oVPQneRVWhDEtTJKrQhvwXdRWbitAufhO4iq9CGJKiTVWhDfgu6i8zEaRc+Cd1FVqENSVAnq9CG/BZ0F5mJ0y58ErqLrEIbkqBOVqEN+S3oLjITp12Yobajg1pZhTbkndD7pIPajg5qZSZOuzBDbUcHtbIKbcg7ofdJB7UdHdTKTJx2YYbajg5qZRXakHdC75MOajs6qJWZOO3CDLUdHdTKKrQh74TeJx3UdnRQKzNx2oUZajs6qJVVaEPeCb1POqjt6KBWZuK0CzPUdnRQK6vQhrwTep90UNvRQa3MxGkXZqjt6KBWOqidsgptSAe1HR3UykycdmGG2o4OaqWD2imr0IZ0UNvRQa3MxGkXZqjt6KBWOqidsgptSAe1HR3UykycdmGG2o4OaqWD2imr0IZ0UNvRQa3MxGkXZqjt6KBWOqidsgptSAe1HR3UykycdmGG2o4OaqWD2imr0IZ0UNvRQa3MxGkXZqjt6KBWOqiVDmqrOqiVDmo7OqiVmTjtwgy1HR3USge10kFtVQe10kFtRwe1MhOnXZihtqODWumgVjqoreqgVjqo7eigVmbitAsz1HZ0UCsd1EoHtVUd1EoHtR0d1MpMnHZhhtqODmqlg1rpoLaqg1rpoLajg1qZidMuzFDb0UGtdFArHdRWdVArHdR2dFArM3HahU9Cd5FTVLaplQ5q5begu8hMnHbhk9Bd5BSVbWqlg1r5LeguMhOnXfgkdBc5RWWbWumgVn4LuovMxGkXPgndRU5R2aZWOqiV34LuIjNx2oVPQneRU1S2qZUOauW3oLvITJx24ZPQXeQUlW1qpYNa+S3oLjITJwpP00GtdFxtpYPaE83EicLTdFArHVdb6aD2RDNxovA0HdRKx9VWOqg90UycKDxNB7XScbWVDmpPNBMnCk/TQa10XG2lg9oTzcSJwtN0UCsdV1vpoPZEM/7X/AHox0/5l3g/gqZ/ifcjaPqXeD+Cpn+J9yNo+pd4P4Kmf4n4NfRDnVPQdkcHtbICPS+noO2VdxCr9ELnFLTd0UGtrEDPyyloe+UdxCq90DkFbXd0UCsr0PNyCtpeeQexSi90TkHbHR3Uygr0vJyCtlfeQazSC51T0HZHB7WyAj0vp6DtlXcQq/RC5xS03dFBraxAz8spaHvlHYyu0qVXVqENWaWyQa10ULvyBEZvQT9yZRXakFUqG9RKB7UrT2D0FvQjV1ahDVmlskGtdFC78gRGb0E/cmUV2pBVKhvUSge1K09g9Bb0I1dWoQ1ZpbJBrXRQu/IERm9BP3JlFdqQVSob1EoHtStPYHkLuvTKKrTRcQLalQ5qV1ahjY6fsKxodGUV2ug4Ae1KB7Urq9BGx09YVjS6sgptdJyAdqWD2pVVaKPjJywrGl1ZhTY6TkC70kHtyiq00fETlhWNrqxCGx0noF3poHZlFdro+AlR0cC3dFC78iToftJB7corvB/BQ9D9pIPalVd4P4KHoPtJB7Urr/B+BA9B95MOalde4f0IHoLuJx3UrrzC+xE8BN1POqhdeYXlR+CgVk5B2ysd1MoJaFc6qJUOauUdxGrlhdTKKWh7pYNaOQHtSge10kGtvINYrbyQWjkFba90UCsnoF3poFY6qJV3EKuVF1Irp6DtlQ5q5QS0Kx3USge18g5itfJCauUUtL3SQa2cgHalg1rpoFbeQaxWXkitnIK2VzqolRPQrnRQKx3Uyju4Z/Vh6M+q6qD2RB3Uysz7EfzqoPZEHdTKzPsR/Oqg9kQd1MrM+xH86qD2RB3Uysz7EfzqoPZEHdTKzPsR/Oqg9kQd1MpMnCg8TQe10nG1lQ5qZRXakA5q5SdERQOn6aBWOq620kGtrEIb0kGt/ISoaOA0HdRKx9VWOqiVVWhDOqiVnxAVDZymg1rpuNpKB7WyCm1IB7XyE6KigdN0UCsdV1vpoFZWoQ3poFZ+QlQ0cJoOaqXjaisd1MoqtCEd1MpPiKo7cAd0F+mgVlag56WD2o4Oalc6qJWZOO3CJ6G7SAe1sgI9Lx3UdnRQu9JBrczEaRc+Cd1FOqiVFeh56aC2o4PalQ5qZSZOu/BJ6C7SQa2sQM9LB7UdHdSudFArM3HahU9Cd5EOamUFel46qO3ooHalg1qZidMufBK6i3RQKyvQ89JBbUcHtSsd1MpMnHZhhtqODmplFdqQBHUrHdSunIK2V2bitAsz1HZ0UCur0IYkqFvpoHblFLS9MhOnXZihtqODWlmFNiRB3UoHtSunoO2VmTjtwgy1HR3Uyiq0IQnqVjqoXTkFba/MxGkXZqjt6KBWVqENSVC30kHtyiloe2UmTrswQ21HB7WyCm1IgrqVDmpXTkHbKzNx2oUZajs6qJVVaMNZhTYmfZJ4W+Ui1HZ0UCur0IazCm1M+iTxtspFqO3ooFZWoQ1nFdqY9EnibZWLUNvRQa2sQhvOKrQx6ZPE2yoXobajg1pZhTacVWhj0ieJt1UuQm1HB7WyCm04q9DGpE8Sb6tchNqODmplFdqQFeh5OQVtP2EmTrswQ21HB7WyCm3ICvS8nIK2nzATp12Yobajg1pZhTZkBXpeTkHbT5iJ0y7MUNvRQa2sQhuyAj0vp6DtJ8zEaRdmqO3ooFZWoQ1ZgZ6XU9D2E2bitAsz1HZ0UCur0IasQM/LKWj7CTNx2oVPQneRDmqrVqENOQVtr7xCPD09fAW6i3RQW7UKbcgpaHvlFeLp6eEr0F2kg9qqVWhDTkHbK68QT08PX4HuIh3UVq1CG3IK2l55hXh6evgKdBfpoLZqFdqQU9D2yivE09PDV6C7SAe1VavQhpyCtldeIZ6m4dN0UFvVQW3HKrQhHdTKT4iKBk7TQW1VB7Udq9CGdFArPyEqGjhNB7VVHdR2rEIb0kGt/ISoaOA0HdRWdVDbsQptSAe18hOiooHTdFBb1UFtxyq0IR3Uyk+IigZO00FtVQe1HavQhnRQKz+hfruXP8f7Eby8H8HLv3//A9GhQ+hz9J+5AAAAAElFTkSuQmCC</string>
    <string name="no_connection">Connection Failed</string>
    <string name="red_X_logo">iVBORw0KGgoAAAANSUhEUgAAAIEAAACBCAYAAADnoNlQAAAABmJLR0QA/wD/AP+gvaeTAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4gcYExY57SiTvwAAAB1pVFh0Q29tbWVudAAAAAAAQ3JlYXRlZCB3aXRoIEdJTVBkLmUHAAAEV0lEQVR42u3dP4sdVRzG8e/dDAkRFosQ2WLt1MJy2SqFhYWFigjpVEwTowi+BvMStPcFWKTcwiwiWy2CWZAUltoGGzHFJYjrz+LOwiVocmd35sz5833gshAC954zn33OMDv3DBhjjDHGGGOMMcYYY0zSBGw5C/lmKwGA68ArAdec7kHztlMFgoBd4D3gM+DtlAMrHMC7wFcBN0sfyOWA2wFHAdH//DDgkof52QACfurn7GGxEAJ2A+70B37ZD+hxwHcBH9sIGwGIYiH8RwOsv4QwDEB5EP6nAYRwMQDlQNgQgBDOByB/CM9ZAp71OmoZwkAA+UK4AICmG+GcAPKDMHAJEMI4APKBMBKA5iCMBGB+CCMDaAbCyADmgzARgOohBOwFPBl5vtJD6AF8OhGAaiFM1ADpIQS80A/m/oQAqoOQCMA6hDeHfsZu4P//B/i7f02ZbeDG2kQeLuBRiQCAL4H9RG/5F3A69aB2Am71v6WPE8guthESN0AEPOjRJRncTn9QhNAiACEIQAgCEIIAhCAAIQhACAIQggDyhnB2h9JHqW5nn/iPQWUDaKERbIDGIQig8aXBJaDxRrABGm8EG6DxRrABGocggGkhXOpr+ijhBA9aGlwC6oSwcSPYAI03gg3Q+DmCDdA4BAG0fR3h/YB9l4D8zhFSNsJJwK8C8GSxeQBdTh9mAacB37PaX/EJq28hbVfg+wS4u4ADEWwG4VHA4do/lQ4hawBZIqgMQvYAPEfwJFAIAsh4OSj8ZNEloLILSi4BQhCA5wgCEIIAXBoEUCCEZWIAP9cCoOinlPU7mh0Cv7DauStV/gR+AB6III+8BHwOvJjwPS8DrwNv1bDhZlfyhw/YA46BK4nf+ioV7LNYPIK1jSKvzPQRtmuCUCSAxPcEuk2/AOqG0BUGYA+4N+MSUOXS0BUG4DhDAMVD6AoBMPdJYNUQukIa4F4BAIqF0NkAQuhsACF0GQM4LhhAURC6DAGkXgJOmXYTzOwhdBk2QMol4DfgD+BVpr15NWsIXcMNcAJ8DSyAD5j+LuZsIXSZAdhPCODuAg6eusx7o+VGmBXA3BtE+OCOxgEIQQBCEIAQBCCEea4DlLJJlBAabQAhCEAIAhCCAIQgACEIQAgCEIIAhCAAIQhACAIQggCEIAAhCEAIAqgOwq3JIQS8IYCsIRwEvBOr2+g3ztBbzjvSfi+g2N3CZ3hwRwe8zOrbVFeB5ZTCbwY8tAGyaoRlwI8BnwTsphrYlBCq2yp2YghnAG4nAzAxhGr3Cp4IwnwAJoJQ/WbRI0OYH8DIEJrZLXwkCPkAGAlCc9vFXxDCsn/OQz4ALgih2ecFnBPCGYA72QE4J4TmHxgxEEJ+S8AFIfjEkGEQ8m+AgRAEMAxCOQ2wIQQBDINQXgM8B4IANodwP+D34gE8BeFbAQyG8E3AF8UDWB+Yh3fQfF0LeC3gurPRNoQtZ8EYY4wxxhhjjDHGGJM+/wLc7IO5dbxQTAAAAABJRU5ErkJggg==</string>
    <string name="alert_message">Would you like to delete this event?</string>
    <string name="alert_delete">Delete</string>
    <string name="alert_cancel">Cancel</string>
    <string name="refresh">refresh</string>
    <string name="rescan">rescan</string>
    <string name="refresh_dropdown">refresh dropdown</string>
    <string name="loading_data">Gathering event info...</string>
    <string name="nav_logo">eventApp Logo</string>
    <string name="notifications_title">Notifications</string>
    <string name="about_title">About</string>
    <string name="notifications_header">Updates</string>
    <string name="no_event_welcome">Please select either Scan QR or a previously scanned event from the events menu above.</string>
    <string name="default_welcome">Welcome!</string>
    <string name="notification_id">LightSys EventApp Notifications</string>
    <string name="no_name">No Name</string>
    <string name="map_button">Get directions</string>
    <string name="phone_button">Call</string>
    <string name="cancel_button">Cancel</string>
    <string name="no_host">No Assigned Host</string>
    <string name="no_driver">No Assigned Driver</string>
    <string name="no_guest">No Assigned Guest</string>
    <string name="contact_button">Contact Button</string>
    <string name="event_location_button">On-Site</string>
    <string name="my_remote_location_button">My Location</string>
    <string name="custom_location_button">Custom Time Zone</string>
    <string name="retry_connection_button">Retry Connection?</string>
    <string name="rescan_qr_button">Rescan QR?</string>
    <string name="bullet_custom">&#9654;</string>
    <string name="msg_default_status">Scan a QR code to import event data.</string>
    <string name="About_App_Header">LightSys Events (Android App)</string>
    <string name="About_App_Body">Copyright © 2017&#8211;2019 LightSys Technology Services, Inc. This app was created for the use of distributing event information for ministry events.\n\nThis app\'s source code is also available under the GPLv3 open&#8211;source license at:\n https://github.com/LightSys/eventApp</string>
    <string name="Open_Source_Header">Open Source</string>
    <string name="Open_Source_Body">This app includes the following open source libraries:</string>
    <string name="Barcode_Scanner_Header">Mobile Vision Barcode Scanner</string>
    <string name="Barcode_Scanner_Body">Copyright © 2016 Nosakhare Belvi\nLicense: MIT License\nWebsite: https://github.com/KingsMentor/MobileVisionBarcodeScanner</string>
    <string name="Android_Open_Source_Proj_Header">Portions from The Android Open Source Project</string>
    <string name="Android_Open_Source_Proj_Body">Copyright © 2016 The Android Open Source Project\nLicense: Apache License 2.0\nWebsite: https://classroom.udacity.com/courses/ud851</string>
    <string name="settings_title">Settings</string>
    <string name="time_zone_item">Time Zone</string>
    <string name="refresh_settings_title">Notifications Refresh Rate</string>
    <string name="refresh_rate_title">Notifications Refresh Rate</string>
    <string name="refresh_rate_setting" translatable="false">refresh_rate</string>
    <string name="refresh_1_min">1 minute</string>
    <string name="refresh_5_min">5 minutes</string>
    <string name="refresh_10_min">10 minutes</string>
    <string name="refresh_15_min">15 minutes</string>
    <string name="refresh_30_min">30 minutes</string>
    <string name="refresh_60_min">60 minutes</string>
    <string name="refresh_never">never</string>
    <string name="refresh_auto">auto</string>
    <string name="refresh_default">event default</string>
    <string name="refresh_val_1_min" translatable="false">1</string>
    <string name="refresh_val_5_min" translatable="false">5</string>
    <string name="refresh_val_10_min" translatable="false">10</string>
    <string name="refresh_val_15_min" translatable="false">15</string>
    <string name="refresh_val_30_min" translatable="false">30</string>
    <string name="refresh_val_60_min" translatable="false">60</string>
    <string name="refresh_val_never" translatable="false">never</string>
    <string name="refresh_val_auto" translatable="false">auto</string>
    <string name="refresh_val_default" translatable="false">default</string>
    <string name="time_settings_title">Time Zone Settings</string>
    <string name="time_zone_setting" translatable = "false">time_zone</string>
    <string name="fetch_error">Error occurred while fetching locations. Please try again.</string>
    <string name="selected_time_zone">Selected time zone is: </string>
    <string name="no_zone_error">No location or time zone has been selected!</string>
    <string name="remote_zone">My Location</string>
    <string name="recycler_view_hint">Please press one of the following items or press the button again to cancel.</string>
    <string name="other_category">Other</string>
    <string name="on_site_pref" translatable="false">on-site</string>
    <string name="my_location_pref" translatable="false">my_location"</string>
    <string name="custom_zone_pref" translatable="false">custom_zone</string>
    <string name="channel_id">lightsys events notifications</string>
    <string name="channel_name">LightSys Events Notifications</string>
    <string name="no_map">No maps available</string>
    <string name="disabled_location_permissions">Location permissions are disabled. Permissions must be enabled from system settings before using location services.</string>
    <string name="denied_location_permissions">Location permissions were denied. Unable to use location.</string>
</resources>