<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:id="@+id/action_rescan"
            android:orderInCategory="100"
            android:title="@string/rescan"
            android:icon="@drawable/ic_camera"
            app:showAsAction="ifRoom"/>
    </group>

        <item
            android:id="@+id/action_refresh"
            android:orderInCategory="100"
            android:icon="@drawable/ic_refresh"
            android:title="@string/refresh"
            app:showAsAction="ifRoom">
        </item>

    <group>
        <item
            android:id="@+id/action_refresh_dropdown"
            android:orderInCategory="100"
            android:title="@string/refresh_dropdown"
            android:icon="@drawable/ic_drop_down"
            app:showAsAction="ifRoom"/>
    </group>

</menu>
